[package]
name = "xp-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For early dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"]  }
# -- DB
sea-query = { version = "0.32", features = ["with-json"]}
# sea-query = { path = "/Users/jeremychone/_jeremy/_rust/xt/fork-sea-query", features = ["with-json"]}
sea-query-rusqlite = {version = "0.7", features = ["with-json"]}
# sea-query-rusqlite = { path = "/Users/jeremychone/_jeremy/_rust/xt/fork-sea-query/sea-query-rusqlite", features = ["with-json"]}
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
modql = {version = "0.4.1", features = ["with-sea-query", "with-rusqlite"] }
# modql = { path = "/Users/jeremychone/_jeremy/_rust/utils/rust-modql", features = ["with-sea-query", "with-rusqlite"] }

# -- Others
tabled = "0.15"
derive_more = {version = "1.0.0-beta", features = ["from"] }
strum = { version = "0.26", features = ["derive"] }